--- a/src/main/resources/templates/admin/board/notice/register.html
+++ b/src/main/resources/templates/admin/board/notice/register.html
@@ -11,9 +11,9 @@
         <section class="section section-users">
             <h2 class="section_title">공지사항 등록</h2>
 
-            <div class="form form--sm form-register">
+            <div class="form form--sm form-register" style="height: 100%;">
 
-                <fieldset class="fieldset">
+                <fieldset class="fieldset"  style="height: 100%;">
                     <div class="input-wrap">
                         <label class="label">제목<i class="required">*</i></label>
                         <input type="text" id="title" class="input" spellcheck="false" placeholder="제목 입력">
@@ -22,9 +22,12 @@
                         <label class="label">작성자<i class="required">*</i></label>
                         <input type="text" id="author" class="input" spellcheck="false" th:value="${usersName}" readonly>
                     </div>
-                    <div class="input-wrap">
+                    <div class="input-wrap" style="height: 60%;">
                         <label class="label">내용</label>
-                        <textarea id="content" class="textarea"></textarea>
+                        <!-- <textarea id="content" class="textarea"></textarea> -->
+                        <div class="e-wrap" style="height: 100%;">
+                            <div id="editor"></div>
+                        </div>                        
                     </div>
                 </fieldset>
 
@@ -41,12 +44,26 @@
 </th:block>
 
 <th:block layout:fragment="script">
+    <link href="//cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+    <script src="//cdn.quilljs.com/1.3.6/quill.js"></script>
+    <script src="https://unpkg.com/quill-image-compress@1.2.11/dist/quill.imageCompressor.min.js"></script>
+    <script th:src="@{/assets/js/admin/library.js}"></script>
     <script>
         window.addEventListener('DOMContentLoaded', () => {            
             // 공지사항 등록
             const registerBtn = document.querySelector('.btn-register');
             registerBtn.addEventListener('click', insertNotice);
+
+            const editorWrap = document.querySelectorAll('.e-wrap');
+            setTimeout(e => {
+                editorWrap[0].style.display = 'block';
+            }, 500);  
+
+            createEditorForNotice();
+
         });
+
+        
     </script>
 </th:block>
 
