공지사항 에디터 수정하기 작업중, requestForm Select usersNick 추가

--- a/src/main/resources/templates/admin/board/notice/list.html
+++ b/src/main/resources/templates/admin/board/notice/list.html
@@ -110,6 +110,10 @@
                                 <td class="modal-th">작성자</td>
                                 <td id="author" class="modal-td"></td>
                             </tr>
+                            <!-- <tr>
+                                <td class="modal-th">작성일</td>
+                                <td id="postDate" class="modal-td"></td>
+                            </tr> -->
                             <tr>
                                 <td class="modal-th">제목</td>
                                 <td class="modal-td">
