[관리자] 업체관리 일부업체 상세조회 안되는 오류 고치는중

--- a/src/main/resources/templates/admin/company/details.html
+++ b/src/main/resources/templates/admin/company/details.html
@@ -260,6 +260,10 @@
                                     </td>
                                 </tr>
                                 <tr>
+                                    <th>사업자등록증 등록일</th>
+                                    <td th:text="${details.companysRegistCertiDate}"></td>
+                                </tr>
+                                <tr>
                                     <th>삭제</th>
                                     <td>
                                         <div class="input-wrap">
