공지사항 에디터 이미지 사이즈 자동 축소되는 부분 변경

--- a/src/main/resources/templates/admin/board/notice/register.html
+++ b/src/main/resources/templates/admin/board/notice/register.html
@@ -40,7 +40,14 @@
 
         </section>
     </main>
+<style>
+.ql-snow .ql-editor img {
+}
 
+.ql-snow .ql-editor img:hover {
+    cursor: pointer;
+}
+</style>
 </th:block>
 
 <th:block layout:fragment="script">
