[관리자] 금액관리 지역, 분야 항목 전체선택 checkbox 추가

--- a/src/main/resources/templates/admin/price/list.html
+++ b/src/main/resources/templates/admin/price/list.html
@@ -56,7 +56,7 @@
                     <table class="regionTable">
                         <thead>
                         <tr>
-                            <th></th>
+                            <th><input id="allRegionIdxValue" type="checkbox" /></th>
                             <th>지역명</th>
                             <th>가격</th>
                             <th>선택 가능 여부</th>
@@ -95,7 +95,7 @@
                     <table class="categoryTable">
                         <thead>
                         <tr>
-                            <th></th>
+                            <th><input id="allCategoryIdxValue" type="checkbox" /></th>
                             <th>분야</th>
                             <th>가격</th>
                             <th>아이콘</th>
