[관리자] 업체관리 > 금액관리 > 업무분야 아이콘 이미지 오류 수정

--- a/src/main/resources/templates/admin/price/list.html
+++ b/src/main/resources/templates/admin/price/list.html
@@ -115,6 +115,7 @@
                             <td class="categoryIcon">
                                 <img class="categoryIconPreview" th:src="${categorylist.categoryIcon}" />
                                 <input th:id="${index.count - 1}" class="categoryIconInputFile" onchange="categoryIconInputFileChange(this)" type="file" />
+                                <input class="hidden categoryIconOriginalName" type="text" />
                             </td>
                         </tr>
                         </tbody>
