--- a/src/main/resources/templates/admin/board/request/list.html
+++ b/src/main/resources/templates/admin/board/request/list.html
@@ -165,61 +165,61 @@
                             </tr>
                             <tr>
                                 <td class="modal-th">의뢰 분야</td>
-                                <td class="modal-td">
-                                    <div class="checkbox-wrap">
-                                        <div class="dt-check-wrap">
-                                            <input type="checkbox" id="r-category1" name="r-category" value="가정문제">
-                                            <label for="r-category1">가정문제</label>
-                                        </div>
-                                        <div class="dt-check-wrap">
-                                            <input type="checkbox" id="r-category2" name="r-category" value="기업문제">
-                                            <label for="r-category2">기업문제</label>
-                                        </div>
-                                        <div class="dt-check-wrap">
-                                            <input type="checkbox" id="r-category3" name="r-category" value="안전분야 조사">
-                                            <label for="r-category3">안전분야 조사</label>
-                                        </div>
-                                        <div class="dt-check-wrap">
-                                            <input type="checkbox" id="r-category4" name="r-category" value="사기/분쟁">
-                                            <label for="r-category4">사기/분쟁</label>
-                                        </div>
-                                        <div class="dt-check-wrap">
-                                            <input type="checkbox" id="r-category5" name="r-category" value="스토킹">
-                                            <label for="r-category5">스토킹</label>
-                                        </div>
-                                        <div class="dt-check-wrap">
-                                            <input type="checkbox" id="r-category6" name="r-category" value="의료/보험">
-                                            <label for="r-category6">의료/보험</label>
-                                        </div>
-                                        <div class="dt-check-wrap">
-                                            <input type="checkbox" id="r-category7" name="r-category" value="부동산">
-                                            <label for="r-category7">부동산</label>
-                                        </div>
-                                        <div class="dt-check-wrap">
-                                            <input type="checkbox" id="r-category8" name="r-category" value="금융/사이버">
-                                            <label for="r-category8">금융/사이버</label>
-                                        </div>
-                                        <div class="dt-check-wrap">
-                                            <input type="checkbox" id="r-category9" name="r-category" value="민원대행">
-                                            <label for="r-category9">민원대행</label>
-                                        </div>
-                                        <div class="dt-check-wrap">
-                                            <input type="checkbox" id="r-category10" name="r-category" value="불법기기탐지">
-                                            <label for="r-category10">불법기기탐지</label>
-                                        </div>
-                                        <div class="dt-check-wrap">
-                                            <input type="checkbox" id="r-category11" name="r-category" value="경호/경비">
-                                            <label for="r-category11">경호/경비</label>
-                                        </div>
-                                        <div class="dt-check-wrap">
-                                            <input type="checkbox" id="r-category12" name="r-category" value="일반조사">
-                                            <label for="r-category12">일반조사</label>
-                                        </div>
-                                        <div class="dt-check-wrap">
-                                            <input type="checkbox" id="r-category13" name="r-category" value="해외조사">
-                                            <label for="r-category13">해외조사</label>
-                                        </div>
-                                    </div>
+                                <td class="modal-td r-category">
+                                    <!-- <div class="checkbox-wrap"> -->
+                                        <!-- <div class="dt-check-wrap"> -->
+                                            <!-- <input type="checkbox" id="r-category1" name="r-category" value="가정문제"> -->
+                                            <!-- <label for="r-category1">가정문제</label> -->
+                                        <!-- </div> -->
+                                        <!-- <div class="dt-check-wrap"> -->
+                                            <!-- <input type="checkbox" id="r-category2" name="r-category" value="기업문제"> -->
+                                            <!-- <label for="r-category2">기업문제</label> -->
+                                        <!-- </div> -->
+                                        <!-- <div class="dt-check-wrap"> -->
+                                            <!-- <input type="checkbox" id="r-category3" name="r-category" value="안전분야 조사"> -->
+                                            <!-- <label for="r-category3">안전분야 조사</label> -->
+                                        <!-- </div> -->
+                                        <!-- <div class="dt-check-wrap"> -->
+                                            <!-- <input type="checkbox" id="r-category4" name="r-category" value="사기/분쟁"> -->
+                                            <!-- <label for="r-category4">사기/분쟁</label> -->
+                                        <!-- </div> -->
+                                        <!-- <div class="dt-check-wrap"> -->
+                                            <!-- <input type="checkbox" id="r-category5" name="r-category" value="스토킹"> -->
+                                            <!-- <label for="r-category5">스토킹</label> -->
+                                        <!-- </div> -->
+                                        <!-- <div class="dt-check-wrap"> -->
+                                            <!-- <input type="checkbox" id="r-category6" name="r-category" value="의료/보험"> -->
+                                            <!-- <label for="r-category6">의료/보험</label> -->
+                                        <!-- </div> -->
+                                        <!-- <div class="dt-check-wrap"> -->
+                                            <!-- <input type="checkbox" id="r-category7" name="r-category" value="부동산"> -->
+                                            <!-- <label for="r-category7">부동산</label> -->
+                                        <!-- </div> -->
+                                        <!-- <div class="dt-check-wrap"> -->
+                                            <!-- <input type="checkbox" id="r-category8" name="r-category" value="금융/사이버"> -->
+                                            <!-- <label for="r-category8">금융/사이버</label> -->
+                                        <!-- </div> -->
+                                        <!-- <div class="dt-check-wrap"> -->
+                                            <!-- <input type="checkbox" id="r-category9" name="r-category" value="민원대행"> -->
+                                            <!-- <label for="r-category9">민원대행</label> -->
+                                        <!-- </div> -->
+                                        <!-- <div class="dt-check-wrap"> -->
+                                            <!-- <input type="checkbox" id="r-category10" name="r-category" value="불법기기탐지"> -->
+                                            <!-- <label for="r-category10">불법기기탐지</label> -->
+                                        <!-- </div> -->
+                                        <!-- <div class="dt-check-wrap"> -->
+                                            <!-- <input type="checkbox" id="r-category11" name="r-category" value="경호/경비"> -->
+                                            <!-- <label for="r-category11">경호/경비</label> -->
+                                        <!-- </div> -->
+                                        <!-- <div class="dt-check-wrap"> -->
+                                            <!-- <input type="checkbox" id="r-category12" name="r-category" value="일반조사"> -->
+                                            <!-- <label for="r-category12">일반조사</label> -->
+                                        <!-- </div> -->
+                                        <!-- <div class="dt-check-wrap"> -->
+                                            <!-- <input type="checkbox" id="r-category13" name="r-category" value="해외조사"> -->
+                                            <!-- <label for="r-category13">해외조사</label> -->
+                                        <!-- </div> -->
+                                    <!-- </div> -->
                                 </td>
                             </tr>
                             <tr>
