--- a/src/main/resources/templates/admin/company/details.html
+++ b/src/main/resources/templates/admin/company/details.html
@@ -471,12 +471,20 @@
                             <tr>
                                 <td class="modal-th">광고 지역</td>
                                 <td class="modal-td">
-                                    <div class="select-wrap">
-                                        <input type="hidden" class="region-price" value="0">
-                                        <select class="select select-sm" id="region05">
-                                            <option value="" selected disabled>선택</option>
-                                            <option th:each="list : ${regionList}" th:data-price="${list.regionPrice}" th:value="${list.regionName}" th:text="${list.regionName}"></option>
-                                        </select>
+                                    <!-- <div class="select-wrap"> -->
+                                        <!-- <input type="hidden" class="region-price" value="0"> -->
+                                        <!-- <select class="select select-sm" id="region05"> -->
+                                            <!-- <option value="" selected disabled>선택</option> -->
+                                            <!-- <option th:each="list : ${regionList}" th:data-price="${list.regionPrice}" th:value="${list.regionName}" th:text="${list.regionName}"></option> -->
+                                        <!-- </select> -->
+                                    <!-- </div> -->
+                                    <div id="localRegion" class="checkbox-wrap">
+                                        <div class="dt-check-wrap" th:each="list : ${regionList}">
+                                            <input type="hidden" class="region-price" th:value="${list.regionPrice}">
+                                            <input type="hidden" class="region-price-add" value="0">
+                                            <input type="checkbox" th:id="|f-region${listStat.count}|" name="f-region" th:value="${list.regionName}">
+                                            <label th:for="|f-region${listStat.count}|" th:text="${list.regionName}"></label>
+                                        </div>
                                     </div>
                                 </td>
                             </tr>
