[관리자] 의뢰 내역 의뢰분야 표시 변경 완료

--- a/src/main/resources/templates/admin/board/request/list.html
+++ b/src/main/resources/templates/admin/board/request/list.html
@@ -165,7 +165,7 @@
                             </tr>
                             <tr>
                                 <td class="modal-th">의뢰 분야</td>
-                                <td class="modal-td r-category">
+                                <td class="modal-td r-category" id="r-category">
                                     <!-- <div class="checkbox-wrap"> -->
                                         <!-- <div class="dt-check-wrap"> -->
                                             <!-- <input type="checkbox" id="r-category1" name="r-category" value="가정문제"> -->
