[관리자] 몰래 카메라 업체 -> 불법기기 탐정 신청 단체 로 변경

--- a/src/main/resources/templates/admin/company/companysHiddencamList.html
+++ b/src/main/resources/templates/admin/company/companysHiddencamList.html
@@ -9,7 +9,7 @@
 
     <main id="main" class="main-list" data-category="company">
         <section class="section section-users">
-            <h2 class="section_title">몰래카메라 업체 목록</h2>
+            <h2 class="section_title">불법기기 탐정 신청 단체</h2>
             <div class="table">
                 <div class="table__top">
                     <div class="top-wrap">
