--- a/src/main/resources/templates/admin/fragments/aside.html
+++ b/src/main/resources/templates/admin/fragments/aside.html
@@ -18,7 +18,7 @@
                 <a href="#none" class="js-dropdown__btn" role="button" data-category="company">업체 관리</a>
                 <ul class="nav-sub js-dropdown__cont">
                     <li class=""><a th:href="@{/admin/manage/company/list}" data-category="list">업체 목록</a></li>
-                    <li class=""><a th:href="@{/admin/manage/companysHiddencam/list}" data-category="hiddencam">몰래카메라 업체</a></li>
+                    <li class=""><a th:href="@{/admin/manage/companysHiddencam/list}" data-category="hiddencam">불법기기 탐정 신청</a></li>
                     <li class=""><a th:href="@{/admin/manage/price/list}" data-category="price">금액 관리</a></li>
                     <li class=""><a th:href="@{/admin/manage/company/premium}" data-category="ad">광고 관리</a></li>
                     <li class=""><a th:href="@{/admin/manage/company/chart/list}" data-category="chart">통계 관리</a></li>
