--- a/src/main/resources/templates/admin/board/request/list.html
+++ b/src/main/resources/templates/admin/board/request/list.html
@@ -278,8 +278,21 @@
                             alert("조건에 일치하는 채팅방이 없습니다.");
                         }
                         else {
-                            alert("해당 채팅방으로 이동합니다.");
-                            window.location.href=`/admin/manage/chat/details?roomId=${data}`;
+                            if(data != "") {
+                                // console.log(data);
+                                alert("해당 채팅방으로 이동합니다.");
+                                window.location.href=`/admin/manage/chat/details?roomId=${data}`;
+                            }
+                            else if(data == "" || data == null) {
+                                // console.log(data);
+                                alert("존재하지 않는 채팅방입니다.");
+                                window.location.reload();
+                            }
+                            else {
+                                // console.log(data);
+                                alert("다시 시도해주세요.");
+                                window.location.reload();
+                            }
                         }
                     })
             })
