--- a/src/main/resources/templates/admin/company/details.html
+++ b/src/main/resources/templates/admin/company/details.html
@@ -410,8 +410,8 @@
                                         <div class="dt-check-wrap" th:if="${regionList} ne null" th:each="list : ${regionList}">
                                             <input type="hidden" class="m-region-price-add" th:value="${details.flagPrice}">
                                             <input type="hidden" class="m-region-price" th:value="${list.regionPrice}">
-                                            <!-- <input type="checkbox" th:id="|m-region${listStat.count}|" name="m-region" th:value="${list.regionName}" th:checked="${#strings.contains(details.companysFlagRegion1, list.regionName)}"> -->
-                                            <input type="checkbox" th:id="|m-region${listStat.count}|" name="m-region" th:value="${list.regionName}">
+                                            <input type="checkbox" th:id="|m-region${listStat.count}|" name="m-region" th:value="${list.regionName}" th:checked="${#strings.contains(details.companysRegion1, list.regionName)}">
+                                            <!-- <input type="checkbox" th:id="|m-region${listStat.count}|" name="m-region" th:value="${list.regionName}"> -->
                                             <label th:for="|m-region${listStat.count}|" th:text="${list.regionName}"></label>
                                         </div>
                                     </div>
