[관리자] 공지사항 css 이슈 수정중

--- a/src/main/resources/static/assets/css/admin/main.css
+++ b/src/main/resources/static/assets/css/admin/main.css
@@ -76,7 +76,8 @@ select:focus {
 /*BREAK POINTS*/
 /*PREFIX*/
 /*COMMOMN*/
-* {
+/* * { */
+*:not(.ql-editor) {
   box-sizing: border-box;
   color: #333333;
 }
