[관리자] 업체정보의 이미지 첨부 크기 리사이징 문제 등 문제 수정

--- a/src/main/resources/templates/admin/company/details.html
+++ b/src/main/resources/templates/admin/company/details.html
@@ -601,7 +601,7 @@
             const cancelLicense = document.querySelector('.license-cancel');
             if (cancelLicense != null) {
                 cancelLicense.addEventListener('click', e => {
-                    update(1, 0);
+                    updateCheck(1, 0);
                 });
             }
 
